--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="col d-flex align-items-center py-3">
           <label for="level">Difficoltà</label>
           <select class="form-select mx-3" name="level" id="level">
-            <option value="0" selected>Difficoltà a</option>
-            <option value="1">Difficoltà b </option>
-            <option value="2">Difficoltà c </option>
+            <option value="0" selected>Nuovo Giocatore</option>
+            <option value="1">Esperto </option>
+            <option value="2">Leggenda c </option>
           </select>
           <button type="button" id="play" class="btn btn-success">Gioca</button>
         </div>
